--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: http://ogp.me/ns#">
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta name="theme-color" content="rgb(7,0,112)"><link href="../images/favicon-32x32.png" rel="icon" type="image/png"/><link href="../images/favicon-32x32.png" rel="shortcut icon" type="image/x-icon"/><link href="../images/puzzlescript-sounds.svg" rel="apple-touch-icon"/><title>Puzzlescript games database</title><meta property="og:title" content="Puzzlescript games database"/><meta name="description" content="The complete list of all puzzlescript games, good or bad."/><meta property="og:description" content="The complete list of all puzzlescript games, good or bad."/><meta property="og:image" content="https://pedropsi.github.io/images/puzzlescript-sounds.svg"/><meta name="twitter:image" content="https://pedropsi.github.io/images/puzzlescript-sounds.svg"><meta property="og:url" content="https://pedropsi.github.io/puzzlescript-sounds.html"/><meta property="og:type" content="article"/><meta property="og:image:alt" content="Puzzlescript games database"/><link href="../codes/lotus.css" rel="stylesheet" type="text/css"/>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+		<meta charset="utf-8"/>
+		<meta name="viewport" 			content="width=device-width, initial-scale=1.0"/>
+		<meta name="theme-color" 		content="rgb(7,0,112)"/>
+		<link href="images/favicon-32x32.png" 	rel="icon" type="image/png"/>
+		<link href="images/favicon-32x32.png" 	rel="shortcut icon" type="image/x-icon"/>
+		<link href="images/180/puzzlescript-sounds.png"	rel="apple-touch-icon"/>
+		<title>Puzzlescript Sounds Catalog (SFX) - Pedro PSI</title>
+		<meta property="og:title"		content="Puzzlescript Sounds Catalog (SFX) - Pedro PSI"/>
+		<meta name="twitter:title"		content="Puzzlescript Sounds Catalog (SFX) - Pedro PSI"/>
+		<meta name="description" 		content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog. Please consider sharing your own sfx sounds with the community - it is easy to contribute, and this may make a difference!"/>
+		<meta property="og:description" content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog. Please consider sharing your own sfx sounds with the community - it is easy to contribute, and this may make a difference!"/>
+		<meta property="og:image" 		content="https://pedropsi.github.io/images/512/puzzlescript-sounds.png"/>
+		<meta name="twitter:card" 		content="summary_large_image"/>
+		<meta name="twitter:description" content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog. Please consider sharing your own sfx sounds with the community - it is easy to contribute, and this may make..."/>
+		<meta name="twitter:image" 		content="https://pedropsi.github.io/images/512/puzzlescript-sounds.png"/>
+		<meta name="twitter:site" 		content="Pedro PSI"/>
+		<meta name="twitter:creator" 	content="Pedro PSI"/>
+		<meta property="og:image:alt" 	content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog. Please consider sharing your own sfx sounds with the community - it is easy to contribute, and this may make a difference!"/>
+		<meta property="og:url"			content="https://pedropsi.github.io/puzzlescript-sounds.html"/>
+		<meta name="twitter:url"		content="https://pedropsi.github.io/puzzlescript-sounds.html"/>
+		<meta property="og:site_name" 	content="Puzzlescript Sounds Catalog (SFX) | Pedro PSI"/>
+		<meta property="og:type" 		content="article"/>
+		<meta itemprop="copyrightHolder" content="Pedro PSI"/>
+		<meta itemprop="copyrightYear" 	content="2021"/>
+		<meta name="author" 			content="Pedro PSI"/>
+		<meta itemprop="publisher" 		content="Pedro PSI"/>
+		<meta name="keywords" 			content="pedropsi, Puzzlescript Sounds Catalog (SFX)"/>
+	<link href="../codes/lotus.css" rel="stylesheet" type="text/css"/>
 		<script src="../codes/core.js"></script>
 		<script id="post">POST=()=>POST=`
 
