--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ ${
 <p>${Config("page.summary")}</p>
 
 
-<h2>Contributing a sound to the ${TitleHTML()}</h2>
-<p>To a add a sound, simply submit a ${AnchorHTML("Pull Request to the repository","https://github.com/pedropsi/puzzlescript-sounds")}, using the format seen in the file ${AnchorHTML(`${Glyph("scroll")} sfx-catalog.js`,"https://github.com/pedropsi/puzzlescript-sounds/sfx-catalog.js")}</p>
+<h3>Contributing a sound to the ${TitleHTML()}</h3>
+<p>To a add a sound, simply submit a ${AnchorHTML("Pull Request to the repository","https://github.com/pedropsi/puzzlescript-sounds")}, using the format seen in the file ${AnchorHTML(`${Glyph("scroll")} sfx-catalog.js`,"sfx-catalog.js")}</p>
 
 
 <h3>Playing a sound (coming soon)</h3>
@@ -86,8 +86,8 @@ ${
 ${Hyper("FilterSearch")}
 ${Hyper("FilterTag")}
 
-<h3>Sorting</h3>
-<h4>Date added</h4>
+<h4>Sorting</h4>
+<h5>Date added</h5>
 <p>By default, all game entries are sorted by date of submission, most recent first. Usually those will be the newest sounds.</p>
 <p>To sort the table differently, simply ${KB("click")} the table headers.</p>
 
