--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 		<title>Puzzlescript Sounds Catalog (SFX) - Pedro PSI</title>
 		<meta property="og:title"		content="Puzzlescript Sounds Catalog (SFX) - Pedro PSI"/>
 		<meta name="twitter:title"		content="Puzzlescript Sounds Catalog (SFX) - Pedro PSI"/>
-		<meta name="description" 		content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog. Please consider sharing your own sfx sounds with the community - it is easy to contribute, and this may make a difference!"/>
-		<meta property="og:description" content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog. Please consider sharing your own sfx sounds with the community - it is easy to contribute, and this may make a difference!"/>
+		<meta name="description" 		content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
+		<meta property="og:description" content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
 		<meta property="og:image" 		content="https://pedropsi.github.io/images/512/puzzlescript-sounds.png"/>
 		<meta name="twitter:card" 		content="summary_large_image"/>
-		<meta name="twitter:description" content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog. Please consider sharing your own sfx sounds with the community - it is easy to contribute, and this may make..."/>
+		<meta name="twitter:description" content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
 		<meta name="twitter:image" 		content="https://pedropsi.github.io/images/512/puzzlescript-sounds.png"/>
 		<meta name="twitter:site" 		content="Pedro PSI"/>
 		<meta name="twitter:creator" 	content="Pedro PSI"/>
-		<meta property="og:image:alt" 	content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog. Please consider sharing your own sfx sounds with the community - it is easy to contribute, and this may make a difference!"/>
+		<meta property="og:image:alt" 	content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
 		<meta property="og:url"			content="https://pedropsi.github.io/puzzlescript-sounds.html"/>
 		<meta name="twitter:url"		content="https://pedropsi.github.io/puzzlescript-sounds.html"/>
 		<meta property="og:site_name" 	content="Puzzlescript Sounds Catalog (SFX) | Pedro PSI"/>
@@ -28,7 +28,7 @@
 		<meta itemprop="copyrightYear" 	content="2021"/>
 		<meta name="author" 			content="Pedro PSI"/>
 		<meta itemprop="publisher" 		content="Pedro PSI"/>
-		<meta name="keywords" 			content="pedropsi, Puzzlescript Sounds Catalog (SFX)"/>
+		<meta name="keywords" 			content="puzzlescript sound, sfx, puzzlescript sound database, Puzzlescript Sounds Catalog (SFX), Pedro PSI"/>
 	<link href="../codes/lotus.css" rel="stylesheet" type="text/css"/>
 		<script src="../codes/core.js"></script>
 		<script id="post">POST=()=>POST=`
