--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 		<title>Puzzlescript Sounds Catalog (SFX) - Pedro PSI</title>
 		<meta property="og:title"		content="Puzzlescript Sounds Catalog (SFX) - Pedro PSI"/>
 		<meta name="twitter:title"		content="Puzzlescript Sounds Catalog (SFX) - Pedro PSI"/>
-		<meta name="description" 		content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
-		<meta property="og:description" content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
+		<meta name="description" 		content="Quickly find good Puzzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
+		<meta property="og:description" content="Quickly find good Puzzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
 		<meta property="og:image" 		content="https://pedropsi.github.io/images/512/puzzlescript-sounds.png"/>
 		<meta name="twitter:card" 		content="summary_large_image"/>
-		<meta name="twitter:description" content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
+		<meta name="twitter:description" content="Quickly find good Puzzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
 		<meta name="twitter:image" 		content="https://pedropsi.github.io/images/512/puzzlescript-sounds.png"/>
 		<meta name="twitter:site" 		content="Pedro PSI"/>
 		<meta name="twitter:creator" 	content="Pedro PSI"/>
-		<meta property="og:image:alt" 	content="Quickly find good Puzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
+		<meta property="og:image:alt" 	content="Quickly find good Puzzlescript sound effects (SFX) with the Puzzlescript Sounds Catalog, or share your best SFX finds with the community!"/>
 		<meta property="og:url"			content="https://pedropsi.github.io/puzzlescript-sounds.html"/>
 		<meta name="twitter:url"		content="https://pedropsi.github.io/puzzlescript-sounds.html"/>
 		<meta property="og:site_name" 	content="Puzzlescript Sounds Catalog (SFX) | Pedro PSI"/>
@@ -83,7 +83,7 @@ ${
 <p>
 	<ul>
 		<li>adding sounds almost identical to an existing sound;</li>
-		<li>restrictng your tags to words "bird","hit","explosion","blip" as these are used to generate the sounds themselves.</li>
+		<li>restricting your tags to words "bird","hit","explosion","blip" as these are used to generate the sounds themselves.</li>
 	</ul>
 </p>
 
@@ -115,7 +115,7 @@ ${Hyper("FilterTag")}
 <h2>FAQ</h2>
 <h3>Why contribute to this database?</h3>
 <p>By sharing your findings you are contributing to a great community and making someone else's life easier!</p>
-<p>Plus, you get to place your name and a link by each sucessful submission - so anyone using your sfx will have the chance to thank you for it!</p>
+<p>Plus, you get to place your name and a link by each successful submission - so anyone using your sfx will have the chance to thank you for it!</p>
 
 <h3>Can this database be used in external projects?</h3>
 <p>Absolutely, use it however you want.</p>
