--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ ${
 <p>
 	<ul>
 		<li>adding sounds almost identical to an existing sound;</li>
-		<li>restricting your tags to words "bird","hit","explosion","blip" as these are used to generate the sounds themselves.</li>
+		<li>restricting your tags to words "coin","collect item","explosion","powerup","bird","chirp","hit","hurt","jump","laser","pew pew","blip","select" as these are already used in the PS editor to generate the sounds.</li>
 	</ul>
 </p>
 
